JEDIT 4.1 VERSION HISTORY

* Version 4.1pre6

Thanks to John Perry, Joshua Miller and Marcelo Vanzin for contributing
to this release.

+ Editing Changes:

- The "Indent on Enter" and "Indent on Tab" options are no longer.
  (Actually, the former was removed in pre5, but I forgot to mention it
  in the changelog).

  The new way to change these options is to just rebind the ENTER and
  TAB keys in the Shortcuts option pane. There are several actions they
  can be bound to:

  Insert Enter
  Insert Enter and Indent
  Insert Tab
  Insert Tab and Indent
  Indent Line (if you want TAB to indent anywhere in a line, not just in
  the leading whitespace, like in emacs).

+ Syntax Highlighting Changes:

- Updated ColdFusion syntax highlighting (Joshua Miller).
- Added Maple syntax highlighting (John Perry)

+ Platform-Specific Changes:

- Updated MacOS plugin (Kris Kopicki).

+ Bug Fixes:

- Removed erronous check box from Buffer Options dialog box.
- Changed the code that makes sure windows are always displayed in the
  visible region of the screen. It now only moves windows if their
  top-left corner is invisible; windows with other parts obscured are
  not moved.
- Fixed possible ArrayIndexOutOfBoundsException with regular expression
  syntax rules.
- Plugin manager's dialog boxes are now parented by the plugin manager,
  not the view (Marcelo Vanzin).
- Fixed repaint problems in tool bar option pane's buttons (and possibly
  other places) by making RolloverButton's isOpaque() method return
  false.
- Fixed highlighting of digits in C, C++, Java and similar modes; now
  hex digits are only highlighted if the number begins with "0x".

* Version 4.1pre5

Thanks to Axel Biernat, Chris Petersen, Eric Benoit, Fan Ho Yin, Kris
Kopicki, Marco Gotze, Ollie Rutherfurd, and Steve Snider for
contributing to this release.

+ Syntax Highlighting Changes:

- Added NQC syntax highlighting (Fan Ho Yin)
- Added Ruby-HTML syntax highlighting (Eric Benoit)